creation of the basic architecture
